Force hardware acceleration to stop overflow issue

--- a/src/stylesheets/components/_example.scss
+++ b/src/stylesheets/components/_example.scss
@@ -53,4 +53,5 @@
   min-height: $govuk-spacing-scale-6 * 2;
   overflow: auto;
   resize: both;
+  transform: translate3d(0, 0, 0);
 }
